syntax = "proto3";

package User;

option go_package = "./go_nuntio";

import "google/protobuf/timestamp.proto";
import "nuntio.proto";

message User {
    string id = 1;
    string email = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
    UserMetadata metadata = 5;
}

message UserMetadata {
    Nuntio.CountryCode country_code = 1;
    google.protobuf.Timestamp verified_at = 2;
    bool verified = 3;
    Nuntio.Gender gender = 4;
    Nuntio.VerificationProviderType verification_provider = 5;
}